corpus/bugs.txt
==============================================================================
VALID - macros inside a named scope
==============================================================================

scope "this scope" {
  #include "path/to/file.vsif"
};

------------------------------------------------------------------------------

(document
  (named_scope
    (type)
    (name)
    (macro
      (path))))
