corpus/scopes.txt
==============================================================================
VALID - empty scope
==============================================================================

scope name {};

------------------------------------------------------------------------------

(document
  (named_scope))

==============================================================================
VALID - multiline empty scope
==============================================================================

scope name {


};

------------------------------------------------------------------------------

(document
  (named_scope))

==============================================================================
VALID - nested scopes
==============================================================================

scope name {
  sub_scope sub_name0 {};

  sub_scope sub_name1 {};

  sub_scope sub_name2 {};
};

------------------------------------------------------------------------------

(document
  (named_scope
    (named_scope)
    (named_scope)
    (named_scope)))

==============================================================================
VALID - nested scopes with pairs
==============================================================================

scope name {
  sub_scope sub_name0 {
    count : 2;
  };

  sub_scope sub_name1 {
    seed : 42;
  };

  sub_scope sub_name2 {
    sv_seed : 128;
  };
};

------------------------------------------------------------------------------

(document
  (named_scope
    (named_scope
      (pair
        (key)
        (integer)))
    (named_scope
      (pair
        (key)
        (integer)))
    (named_scope
      (pair
        (key)
        (integer)))))
